@@ -5,16 +5,14 @@ require 'treeview'
 
 class ServerTreeView < TreeView
   attr_accessor :responder_delegate
+  attr_writer :theme
   
   def initialize
-    #@active_bgcolor = NSColor.from_rgb(0xd6, 0xdd, 0xe5)
-    @active_bgcolor = NSColor.from_rgb(0xe5, 0xed, 0xf7)
-    @inactive_bgcolor = NSColor.from_rgb(0xe8, 0xe8, 0xe8)
-
-    @active_top_line_color = NSColor.from_rgb(0x95, 0x99, 0xb0)
-    from = NSColor.from_rgb(0xab, 0xb8, 0xc5)
-    to = NSColor.from_rgb(0x7e, 0x8e, 0x9f)
-    @active_gradient = GradientFill.gradientWithBeginColor_endColor(from, to)
+    @bgcolor = NSColor.from_rgb(229, 237, 247)
+    from = NSColor.from_rgb(173, 187, 208)
+    to = NSColor.from_rgb(152, 170, 196)
+    @gradient = GradientFill.gradientWithBeginColor_endColor(from, to)
+    @bottom_line_color = NSColor.from_rgb(140, 152, 176)
   end
   
   def acceptsFirstResponder
@@ -32,25 +30,15 @@ class ServerTreeView < TreeView
   
   def _highlightRow_clipRect(row, rect)
     return unless NSApp.isActive
-    
     rect = self.rectOfRow(row)
-
-    line_rect = rect.dup
-    line_rect.height = 1
-    @active_top_line_color.set
-    NSRectFill(line_rect)
-    
-    rect.y += 1
-    rect.height -= 1
-    @active_gradient.fillRect(rect)
+    @gradient.fillRect(rect)
+    @bottom_line_color.set
+    bottom_line_rect = NSMakeRect(NSMinX(rect), NSMaxY(rect) - 1.0, NSWidth(rect), 1.0)
+    NSRectFill(bottom_line_rect)
   end
   
   def drawBackgroundInClipRect(rect)
-    if NSApp.isActive
-      @active_bgcolor.set
-    else
-      @inactive_bgcolor.set
-    end
+    @bgcolor.set
     NSRectFill(rect)
   end
 end
